source/stylesheets/screen.css
@media (min-width: 768px) {
    .md\:max-w-\[1366px\] {
        max-width: 1366px;
    }
}

@media (min-width: 1024px) {
    .lg\:lg\:text-\[2\.8rem\] {
        font-size: 2.8rem;
    }
}

.text-pink-500,
.hover\:text-pink-500:hover,
.hover\:text-pink-300:hover,
.hover\:border-pink-500:hover {
    color: var(--nilenso-pink);
}

.bg-pink-500 {
    background-color: var(--nilenso-pink);
}

html {
    font-family: Poppins, sans-serif;
    scroll-behavior: smooth;
    --nilenso-pink: #FF3D84;
    --nilenso-black: #000000;
    --grey: #828282;
    --nilenso-gray-2: #0c0a0a;
}

p, p li, article {
    font-family: Crimson Pro, serif;
    font-size: 22px;
}

blockquote {
    border-left: 4px solid #ddd;
    padding: 0 1em;
    margin-bottom: 1em;
    color: #767676;
    display: inline-block;
}

blockquote p {
    margin-bottom: 0 !important;
}

.monospaced {
    font-size: 0.9em;
}

h1 {
    font-family: Poppins, sans-serif;
    font-weight: 600;
    color: var(--nilenso-black);
}

h2, h3, h4 {
    font-family: Poppins, sans-serif;
    font-weight: 500;
}

hr {
    margin-top: 1rem;
    margin-bottom: 1rem;
}

#menuToggle {
    z-index: 1;
    -webkit-user-select: none;
    user-select: none;
}

#menuToggle a {
    text-decoration: none;
    transition: color 0.3s ease;
}

#menuToggle input {
    display: block;
    width: 40px;
    height: 32px;
    position: absolute;
    cursor: pointer;
    opacity: 0;
    z-index: 2;
    -webkit-touch-callout: none;
}

#menuToggle span {
    margin-bottom: 3px;
    z-index: 1;
    transform-origin: 4px 0px;
    transition: .25s ease-in-out;
}

#menuToggle span:first-child {
    transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2) {
    transform-origin: 0% 100%;
    margin-bottom: 0;
}

#menuToggle input:checked ~ span {
    opacity: 1;
    transform: rotate(45deg) translate(-2px, -1px);
    background: #000;
}

#menuToggle input:checked ~ span:nth-last-child(3) {
    opacity: 0;
    transform: rotate(0deg) scale(0.2, 0.2);
}

#menuToggle input:checked ~ span:nth-last-child(2) {
    transform: rotate(-45deg) translate(2px, -1px);
}

#menu {
    background: #fff;
    -webkit-font-smoothing: antialiased;
    transform-origin: 0% 0%;
    transform: translate(-100%, 0);
    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
}

#menuToggle input:checked ~ #menu {
    transform: none;
}

.dropdown:hover .dropdown-menu {
    display: block;
}

.dropdown-menu {
    background-color: white;
    left: -17px;
 }

.dropdown-menu > li {
    /* border: 1px solid red; */
    padding-left: 20px;
}

.swiper-container {
    z-index: 0;
}

.tabs-content .swiper-container {
    width: 100%;
}

.tabs-buttons .swiper-slide {
    padding: 1rem 2rem;
}

.logo-slider .tabs-buttons .active-tab {
    opacity: 1;
}

.avatar-slider .tabs-buttons .swiper-slide {
    padding: 1rem 2rem;
    width: 64px !important;
}

.avatar-slider .tabs-buttons .active-tab {
    opacity: 1;
    border: 1px solid #FF3D84;
}

.swiper-button-next, .swiper-button-prev {
    width: 24px;
    height: 46px;
}

.swiper-button-next {
    right: 30px;
    background-size: 16px;
    background-image: url('images/svg/right-arrow.svg');
}

.swiper-button-prev {
    left: 30px;
    background-size: 16px;
    background-image: url('images/svg/left-arrow.svg');
}

.list-items li {
    counter-increment: ol-counter;
}

.list-items li:before {
    content: counter(ol-counter, decimal-leading-zero);
    font-weight: 300;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.5rem;
    margin-right: 8px;
    line-height: 1;
    position: absolute;
    left: 0;
    top: 4px;
}

.list-items li::marker {
    display: none;
}

.talk-item:first-child {
    border-top: 0px;
}

@media (max-width: 1024px) {
    .logo-slider .tabs-buttons .swiper-slide {
        width: 138px !important;
    }
}

@media (max-width: 991px) {
    .avatar-slider .tabs-buttons .swiper-slide {
        background-size: 100px !important;
    }

    .swiper-button-next {
        right: 15px;
    }

    .swiper-button-prev {
        left: 15px;
    }

    .logo-slider .tabs-buttons .swiper-slide {
        background-size: 100px !important;
        width: 125px !important;
    }
}

@media (max-width: 640px) {
    .swiper-button-next {
        right: 10px;
    }

    .swiper-button-prev {
        left: 10px;
    }

    .avatar-slider .tabs-buttons .swiper-slide {
        background-size: 80px !important;
    }

    .swiper-button-next, .swiper-button-prev {
        width: 12px;
        height: 24px;
        background-size: contain;
        margin-top: -10px;
    }

    .avatar-slider .tabs-buttons .swiper-slide {
        height: 62px;
        width: 62px !important;
    }

    .logo-slider .tabs-buttons .swiper-slide {
        background-size: 80px !important;
        width: 125px !important;
    }

    .list-items li:before {
        font-size: 18px;
    }
}

@media (max-width: 375px) {
    .logo-slider .tabs-buttons .swiper-slide {
        width: 110px !important;
    }
}



/* CSS for article and its content */

@media (min-width: 768px) {
    article h1 {
        line-height: 4.5rem !important;
    }

    article h4 {
        line-height: 2.25rem;
    }
}

article {
    font-size: 1.3125rem;
    font-weight: 400;
    line-height: 1.875rem;
}

article figure, article iframe {
    padding-top: 2rem;
    padding-bottom: 2rem;
    margin: auto;
}

article iframe {
    max-width: 100%;
}

article figcaption {
    font-style: italic;
    text-align: center;
    margin-top: 0.5rem;
}

article video,article .flash-video {
    margin: 0 auto 1.5em
}

article ul {
    margin-left: 2em;
    list-style-type: disc;
    margin-bottom: 1.5rem;
}

article ol {
    margin-left: 2em;
    list-style-type: decimal;
    margin-bottom: 1.5rem;
}

article a {
    color: var(--nilenso-pink);
}

article h2 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

article pre {
    background: #fdf6e3 url('/images/noise.png?1433967138') top left;
    -moz-border-radius: 0.4em;
    -webkit-border-radius: 0.4em;
    border-radius: 0.4em;
    border: 1px solid #e7dec3;
    line-height: 1.45em;
    font-size: 13px;
    margin-bottom: 2.1em;
    padding: .8em 1em;
    color: #586e75;
    overflow: auto;
}

p code,li code {
    display: inline-block;
    white-space: no-wrap;
    background: #fff;
    font-size: .8em;
    line-height: 1.5em;
    color: #555;
    border: 1px solid #ddd;
    -moz-border-radius: 0.4em;
    -webkit-border-radius: 0.4em;
    border-radius: 0.4em;
    padding: 0 .3em;
    margin: -1px 0;
}

p pre code,li pre code {
    font-size: 1em !important;
    background: none;
    border: none;
}

article h3 {
    font-size: 1.75rem;
    color: var(--grey);
    margin-bottom: 1.2rem;
}

article h4 {
    color: var(--nilenso-black);
    font-size: 1.3rem;
    margin-bottom: 1.2rem;
}

article p {
    margin-bottom: 1.5rem;
}

article .pre-quote {
    background: #fdf6e3 url('/images/noise.png?1433967138') top left;
    -moz-border-radius: 0.4em;
    -webkit-border-radius: 0.4em;
    border-radius: 0.4em;
    border: 1px solid #e7dec3;
    line-height: 1.45em;
    font-size: 13px;
    margin-bottom: 2.1em;
    padding: .8em 1em;
    color: #586e75;
    font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
}

/* Blog Archive Page CSS */
#blog-archives {
    color: var(--grey);
}

#blog-archives article {
    padding: 1em 0 1em;
    position: relative;
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAABCAYAAACsXeyTAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAFUlEQVQIHWNIS0sr/v//PwMMDzY+ADqMahlW4J91AAAAAElFTkSuQmCC') bottom left repeat-x;
    display: flex;
}

#blog-archives time {
    flex: none;
    width: 7rem;
}

.blog-year {
    width: 7rem;
    margin-bottom: 0px;
}

.pagination-url {
    color: var(--nilenso-pink);
}

.author {
    display: flex;
}

/* CSS for index page */
#index-page-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
    grid-auto-rows: 300px;
    grid-auto-flow: dense;
    gap: 10px;
    margin-top: 30px;
    margin-bottom: 30px;
}

#index-page-grid > * {
    grid-area: span 1 / span 1;
}

#index-page-grid .post-tile-large {
    grid-area: span 2 / span 2;
}

.post-tile-normal {
    justify-self: stretch;
    max-height: 300px;
    min-width: 270px;
    overflow: hidden;
}

.post-tile .post-title {
    margin-top: 10px;
    font-size: 1em;
    max-height: 35%;
    line-height: 1.2;
}

.post-tile .post-img {
    margin-right: 10px;
    max-height: 50%;
    min-width: 100%;
    object-fit: cover;
}

.post-tile:hover {
    background-color: #d7d7d7;
    box-shadow: 0 0 0 2px #d7d7d7;
    cursor: pointer;
}

.post-tile .post-author {
    font-size: 0.8em;
    color: var(--nilenso-pink);
    margin-top: auto;
    max-height: 25%;
}

.post-tile-large .post-title {
    margin-top: 10px;
    font-size: 1.4em;
}

.post-tile .post-anchor {
    max-height: 75%;
    overflow: clip;
}

.post-tile-large .post-anchor {
    max-height: 85%;
    overflow: clip;
}

.post-tile .post-description {
    font-size: 0.9em;
    font-weight: 400;
    max-height: 65%;
    overflow: clip;
}


@media (max-width: 600px) {
    #index-page-grid .post-tile-large {
        grid-area: span 1 / span 1;
    }

    .post-tile-large .post-description {
        display: none;
    }

    .post-title {
        line-height: 1.2;
        font-size: 1em;
    }

    .post-author {
        line-height: 1.2;
    }

    .post-tile-large .post-title {
        line-height: 1.2;
        font-size: 1em;
    }

    .post-tile-large .post-img {
        max-height: 70%;
    }

    .post-tile-large .post-author {
        line-height: 1.2;
    }
}

.meta {
    color: var(--grey);
    margin-bottom: 10px;
}

